Arreglo de login y registro de usuario

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -87,7 +87,6 @@
     <string name="clues_description">You can buy a clue for the challenge, the clue is a description,
         once you buy it, the challenge points that you will be receiving for this challenge will
         be halved by half </string>
-    <string name="error_email_password">Email or Password is wrong</string>
     <string name="question_logut">Do you want to logout?</string>
 
     <!-- AlertDialog messages -->
@@ -105,6 +104,7 @@
     <!-- Error messages -->
     <string name="error_msg">An unexpected error occured</string>
     <string name="error_msg_internet">Could not reach server. Check your internet connection</string>
+    <string name="error_msg_emailOrPassword">Email or Password is wrong</string>
 
     <!-- Keyboard messages -->
     <string name="a">A</string>
