--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,7 +200,9 @@
     <string name="password_number_error">Debe contener al menos un número</string>
     <string name="num_correct_answers">Respuestas correctas:</string>
     <string name="num_wrong_answers">Respuestas incorrectas:</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Ranking Activity-->
+    <string name="ranking" translatable="false">Ranking</string>
+
 
 </resources>
